--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "install-backend": "cd backend && npm install",
-    "install-frontend": "cd frontend && npm install",
+    "install-frontend": "cd frontend && npm install --legacy-peer-deps",
     "postinstall": "npm run install-backend && npm run install-frontend && npm run build-frontend",
     "build-frontend": "cd frontend && npm run build",
     "start": "cd backend && node app.js"
